Fix: Items alignments

--- a/components/Header.module.css
+++ b/components/Header.module.css
@@ -84,6 +84,7 @@
 .centerTitle {
     font-family: 'Dogica Pixel', Arial, Helvetica, sans-serif;
     justify-self: center;
+    justify-content: center;
 }
 
 .right {
@@ -94,6 +95,7 @@
     overflow: hidden;
     display: flex;
     height: 100%;
+    justify-content: flex-end;
     
     > * {
         padding: 15px;
